# capstone

./: .env_template.env  .gitignore  Documentation.docx  Presentation.pptx  README.md  api.py  architecture.drawio  chain.py  docker-compose.yml  elastic_connector.py  logger.py  main.py  upload_to_elastic.py
backend/: Dockerfile  api.py  chain.py  elastic_connector.py  main.py  pyproject.toml  upload_to_elastic.py
backend/articles/: wikipedia-100_J._E._Coffland.json  wikipedia-101_Hisham_Abdulrahman.json  wikipedia-103_Ime_Archibong.json  wikipedia-105_Catherine_Stampfl.json  wikipedia-106_Where_I_Live.json  wikipedia-109_Fyodor_Selin.json  wikipedia-10_Bianjing_Drum_Tower.json  wikipedia-110_Clarke_Ingram.json  wikipedia-111_Cold_Newton.json  wikipedia-112_Hotel_Agrabad.json  wikipedia-113_Lawrence_Public_School.json  wikipedia-115_Mark_Dennis_(director).json  wikipedia-117_ISO_3166-2_GW.json  wikipedia-118_Küçükpalabıyık,_Çorum.json  wikipedia-119_Huacllan_District.json  wikipedia-122_Henner_Hofmann.json  wikipedia-126_Erzsi_Somogyi.json  wikipedia-127_1954–55_Danish_1st_Division.json  wikipedia-128_Peter_Jonas_(director).json  wikipedia-133_Gianfranco_Sibello.json  wikipedia-135_Graham_Formation.json  wikipedia-138_Joan_&_David.json  wikipedia-139_Poręby_Kupieńskie.json  wikipedia-140_Glenville-Emmons_School_District.json  wikipedia-141_Goin'_Downtown.json  wikipedia-143_Thede_Kahl.json  wikipedia-147_See_You_at_the_Pillar.json  wikipedia-148_Bonner_House_(Bath,_North_Carolina).json  wikipedia-149_W._Barbrooke_Grubb.json  wikipedia-153_Chevalier_de_Meude-Monpas.json  (+431 more)
(+550 files in other folders)
