[tool.poetry]
package-mode = false
[project]
name = "capstone"
version = "0.1.0"
description = ""
authors = [
    {name = "Janne Taskinen",email = "janne.taskinen@tuni.fi"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langchain (==0.3.19)",
    "openai (==1.65.2)",
    "dotenv (==0.9.9)",
    "langchain-community (>=0.3.18,<0.4.0)",
    "langchain-groq (>=0.2.4,<0.3.0)",
    "langchain-openai (>=0.3.7,<0.4.0)",
    "peft (>=0.14.0,<0.15.0)",
    "torch (>=2.6.0,<3.0.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "elasticsearch (>=8.17.2,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
